// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches last snapshot 1`] = `
Object {
  "fetchSearchResults": [Function],
  "setSearchFilter": [Function],
  "setSearchTerm": [Function],
}
`;

exports[`mapStateToProps matches last snapshot 1`] = `
Object {
  "filter": "all",
  "goToPerson": [Function],
  "goToPost": [Function],
  "hasMore": undefined,
  "pending": false,
  "searchResults": Array [],
  "searchTerm": "",
}
`;

exports[`mergeProps matches last snapshot 1`] = `
Object {
  "fetchMoreSearchResults": [Function],
  "fetchSearchResults": [Function],
  "filter": "all",
  "goToPerson": [Function],
  "goToPost": [Function],
  "hasMore": undefined,
  "pending": false,
  "searchResults": Array [],
  "searchTerm": "",
  "setSearchFilter": [Function],
  "setSearchTerm": [Function],
}
`;
